test/output/custom/template_FullMetadata_v1.yaml
# This is a custom template for a constraint template
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: fullmetadata
spec:
  crd:
    spec:
      names:
        kind: FullMetadata
      validation:
        openAPIV3Schema:
          properties:
            super:
              description: |-
                super duper cool parameter with a description
                on two lines.
              type: string
  targets:
  - code:
    - engine: Rego
      source:
        libs:
        - |-
          package lib.libraryA
          
          import data.lib.libraryB
        - |-
          package lib.libraryB
        rego: |-
          package test_fullmetadata
          
          import data.lib.libraryA
          
          policyID := "P123456"
          
          violation if {
              true # some comment
          }
        version: v1
    target: admission.k8s.gatekeeper.sh
