test/output/custom/template_NoMetadata.yaml
# This is a custom template for a constraint template
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: nometadata
spec:
  crd:
    spec:
      names:
        kind: NoMetadata
  targets:
  - libs:
    - |-
      package lib.libraryA
      
      import data.lib.libraryB
    - |-
      package lib.libraryB
    rego: |-
      package test_nometadata
      
      import future.keywords.if
      import data.lib.libraryA
      
      policyID := "P123456"
      
      violation if {
          true # some comment
      }
    target: admission.k8s.gatekeeper.sh
